53회차: 크롤링

--- a/python/seventh.ipynb
+++ b/python/seventh.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c746ceea",
+   "id": "3c4de048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "365f95b0",
+   "id": "2c4ab1de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0ded4c3d",
+   "id": "983d208f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "84dc6fd7",
+   "id": "0f28ce3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6f25474a",
+   "id": "195f6e75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "99357704",
+   "id": "1313b37a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "13ca1cde",
+   "id": "9242075a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3482356f",
+   "id": "43ea5b76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2989fd44",
+   "id": "4448b7f9",
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3633905b",
+   "id": "183d4c44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "82d819d8",
+   "id": "286a026b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "684a3fa9",
+   "id": "f356691d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,8 +1405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a664c56",
+   "execution_count": 26,
+   "id": "192d617c",
    "metadata": {},
    "outputs": [
     {
@@ -2677,8 +2677,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "29f1d2a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A - B - C - D - E - F - G - H\n",
+    "# 여기서 D를 빼려고 하면 ?\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d4339a21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 크롤링 -> 웹 상에서 정보 수집하는 내용임.\n",
+    "# 내가 관심으로 걸어둔 정보를 자고 일어나서 보면됨 (컴퓨터가 수집해줄테고)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "87d62347",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting selenium\n",
+      "  Downloading selenium-4.5.0-py3-none-any.whl (995 kB)\n",
+      "Collecting trio~=0.17\n",
+      "  Downloading trio-0.22.0-py3-none-any.whl (384 kB)\n",
+      "Requirement already satisfied: urllib3[socks]~=1.26 in d:\\program\\anaconda3\\lib\\site-packages (from selenium) (1.26.9)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in d:\\program\\anaconda3\\lib\\site-packages (from selenium) (2021.10.8)\n",
+      "Collecting trio-websocket~=0.9\n",
+      "  Downloading trio_websocket-0.9.2-py3-none-any.whl (16 kB)\n",
+      "Collecting async-generator>=1.9\n",
+      "  Downloading async_generator-1.10-py3-none-any.whl (18 kB)\n",
+      "Requirement already satisfied: cffi>=1.14 in d:\\program\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.15.0)\n",
+      "Requirement already satisfied: sortedcontainers in d:\\program\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Collecting exceptiongroup>=1.0.0rc9\n",
+      "  Downloading exceptiongroup-1.0.0rc9-py3-none-any.whl (12 kB)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in d:\\program\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (21.4.0)\n",
+      "Requirement already satisfied: sniffio in d:\\program\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.2.0)\n",
+      "Collecting outcome\n",
+      "  Downloading outcome-1.2.0-py2.py3-none-any.whl (9.7 kB)\n",
+      "Requirement already satisfied: idna in d:\\program\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (3.3)\n",
+      "Requirement already satisfied: pycparser in d:\\program\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
+      "Collecting wsproto>=0.14\n",
+      "  Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in d:\\program\\anaconda3\\lib\\site-packages (from urllib3[socks]~=1.26->selenium) (1.7.1)\n",
+      "Collecting h11<1,>=0.9.0\n",
+      "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+      "Installing collected packages: outcome, h11, exceptiongroup, async-generator, wsproto, trio, trio-websocket, selenium\n",
+      "Successfully installed async-generator-1.10 exceptiongroup-1.0.0rc9 h11-0.14.0 outcome-1.2.0 selenium-4.5.0 trio-0.22.0 trio-websocket-0.9.2 wsproto-1.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "44f4ff06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, url_for, request, jsonify\n",
+    "from flask_cors import CORS, cross_origin\n",
+    "\n",
+    "import json\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c73137e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import selenium\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "\n",
+    "import threading\n",
+    "import time\n",
+    "import logging\n",
+    "\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b2e66c05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CRAWLED_RES_SAVED_FILE = \"crawl_data/result\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7be3b9ba",
+   "id": "a7e37fb6",
    "metadata": {},
    "outputs": [],
    "source": []
